--- a/01_Inception/package.json
+++ b/01_Inception/package.json
@@ -2,8 +2,9 @@
   "name": "01_inception",
   "version": "1.0.0",
   "description": "This is npm ",
-  
   "scripts": {
+    "start":"parcel index.html", 
+    "build" :"parcel build index.html",
     "test": "jest"
   },
   "keywords": [
