--- a/01_Inception/package.json
+++ b/01_Inception/package.json
@@ -17,7 +17,9 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "module_name": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0"
   }
 }
