--- a/01_Inception/package.json
+++ b/01_Inception/package.json
@@ -17,6 +17,7 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "antd": "^5.7.3",
     "module_name": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
